animation of project's image ----done

--- a/public/projects.json
+++ b/public/projects.json
@@ -4,20 +4,23 @@
         "image": "https://i.ibb.co/wwM8vzj/homifyestate-8556d-web-app.jpg",
         "preview": "https://homifyestate-8556d.web.app/",
         "client": "https://github.com/mdsoponhossain/team-project-homifyState-client",
-        "server": "https://github.com/mdsoponhossain/team-project-homifyState-server"
+        "server": "https://github.com/mdsoponhossain/team-project-homifyState-server",
+        "translate":"hover:translate-y-[-1500px]"
     },
     {
         "name": "stayNest",
         "image": "https://i.ibb.co/fYPp429/stay-nest-app-web-app.jpg",
         "preview": "https://stay-nest-app.web.app",
         "client": "https://github.com/mdsoponhossain/stay-nest-app",
-        "server": "https://github.com/mdsoponhossain/stay-nest-app-server"
+        "server": "https://github.com/mdsoponhossain/stay-nest-app-server",
+        "translate":"hover:translate-y-[-900px]"
     },
     {
         "name": "collegeCorner",
         "image": "https://i.ibb.co/fHYLRJy/college-corner-web-app.jpg",
         "preview": "https://college-corner.web.app",
         "client": "https://github.com/mdsoponhossain/college-corner",
-        "server": "https://github.com/mdsoponhossain/college-corner-server"
+        "server": "https://github.com/mdsoponhossain/college-corner-server",
+        "translate":"hover:translate-y-[-530px]"
     }
 ]
